Sun, 02 Mar 2008 13:52:42 +0100 <thp@perli.net>
Pickle-based storage method (dumbshelve); HTTP HEAD requests; buggy feed fixes

	* src/gpodder/dumbshelve.py: Added (replacement for "shelve" using
	pickle)
	* src/gpodder/libgpodder.py: Rename *.db files to *.pickle.db, so we
	don't clash with old-style shelve .db files
	* src/gpodder/libpodcasts.py: Use dumbshelve as a replacement for
	shelve; add EpisodeURLMetainfo that keeps track of metainfo downloaded
	via HTTP HEAD requests; make getting episode length and pubDate a bit
	more intelligent by trying to find correct values via HTTP HEAD;
	improve episode sorting by falling back to episode titles when no
	pubDate has been found (or pubDate is equal); 
	* src/gpodder/util.py: Add get_episode_info_from_url() function that
	tries to find out the length and pubDate of an episode by looking at
	the data from the HTTP HEAD; also support HTTP proxys via an optional
	"proxy" keyword argument

Wed, 27 Feb 2008 10:44:48 +0100 <thp@perli.net>
Notify user about no new episodes when updating from tray icon

	* src/gpodder/gui.py: Patch from Jérôme Chabod
	<jerome.chabod@ifrance.com> to notify the user about "no new episodes"
	when updating the feed cache manually via the tray icon
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=3)
	* src/gpodder/trayicon.py: See above

Wed, 27 Feb 2008 09:52:14 +0100 <thp@perli.net>
Use xdg-open for files that we don't know the file type of

	* src/gpodder/libgpodder.py: If the file we want to open/play is not
	an audio or video file, we use "xdg-open" to open the file (this is
	used for things like PDF files and the like, e.g. in Chaos TV)

Wed, 27 Feb 2008 09:46:55 +0100 <thp@perli.net>
Add Flash Video (flv) and Windows Media Video (wmv) to file detection

	* src/gpodder/util.py: Detect *.flv and *.wmv files as video files

Wed, 27 Feb 2008 09:39:42 +0100 <thp@perli.net>
When sending via Bluetooth, always rename/copy the file
